--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.7.0",
+    "firebase": "^9.8.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
