--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "firebase": "^9.8.1",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
