--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.7.0",
     "firebase": "^9.8.1",
+    "moment": "^2.29.3",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
